# devos

./: .gitignore  main.py  pyproject.toml
.ai/: CHANGELOG_SHORT.md  DECISIONS.md  KNOWN_ISSUES.md  NEXT_TASK.md  PROJECT_STATE.md
.ai/design/: core_architecture.md
.ai/prompts/: AI Graph Builder.md  DEVOS KERNEL PROMPT.md  DevOS AI Critic Layer (Pre-Execution Validation System).md  DevOS Architecture Stabilization Prompt (REPAIR LOCK MODE).md  DevOS Execution Optimization Layer (Final Core Upgrade).md  DevOS Multi-Agent Runtime Layer.md  DevOS Observability Layer Implementation.md  Fix & Stabilize DevOS Feedback Layer (Final Hardening).md  Fix DevOS AI Architecture.md  Introduce Execution Graph Layer.md  PROMPT для пробного запуска.md  SYSTEM PROMPT.md  Дерево.txt  Исправленная архитектура DevOS.md  КРАТКАЯ ПАМЯТЬ.md
ai/: runtime.py
cli/: main.py
cli/commands/: ai.py  project.py  task.py
kernel/: boot_test.py  bootstrap.py  engine.py  executor.py  planner.py  policy.py  router.py  state.py  test_ai_builder.py  test_dag.py
kernel/critic/: __init__.py  critic_engine.py  graph_validator.py  models.py  optimizer.py  safety_analyzer.py
kernel/feedback/: __init__.py  analyzer.py  context_builder.py  filter.py  knowledge_base.py  models.py
kernel/observability/: __init__.py  events.py  example.py  logger.py  metrics.py  replay.py  tracer.py
kernel/optimizer/: __init__.py  bottleneck_detector.py  cost_model.py  graph_rewriter.py  models.py  optimizer_engine.py  (+1 more)
memory/: store.py
plugins/: registry.py
tests/: test_fs_integration.py  test_git_integration.py
(+3 files in other folders)
