[project]
name = "devos"
version = "0.1.0"
description = "AI-powered development platform (AI Project OS)"
authors = [
    {name = "DevOS Team"}
]
requires-python = ">=3.13"
dependencies = [
    "typer[all]>=0.12.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "loguru>=0.7.0",
    "pydantic>=2.7.0",
]

[project.scripts]
devos = "devos.main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
